Added basic functionalities to website

--- a/WaterReporterWebsite/index.html
+++ b/WaterReporterWebsite/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Water Report</title>
 </head>
 <body>
-
+	<h1>Harambe Loved Waters!</h1>
+	<!-- <h2 onclick="onClicked()">Login</h2> -->
+	<button onclick="onClicked()">Login</button>
+	<button onclick="onClicked()">Sign Up</button>
+	<!-- <h2>Sign Up</h2> -->
+	<script>
+		function onClicked() {
+			alert("Hello");
+		}
+	</script>
 </body>
 </html>
