--- a/WaterReporterWebsite/index.html
+++ b/WaterReporterWebsite/index.html
@@ -6,7 +6,7 @@
 <body>
 	<h1>Harambe Loved Waters!</h1>
 	<!-- <h2 onclick="onClicked()">Login</h2> -->
-	<button onclick="onClicked()">Login</button>
+	<button onclick="location.href='login.html'">Login</button>
 	<button onclick="onClicked()">Sign Up</button>
 	<!-- <h2>Sign Up</h2> -->
 	<script>
