Added Firebase code

--- a/WaterReporterWebsite/index.html
+++ b/WaterReporterWebsite/index.html
@@ -14,5 +14,18 @@
 			alert("Hello");
 		}
 	</script>
+	<script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
+	<script>
+	  // Initialize Firebase
+	  // TODO: Replace with your project's customized code snippet
+	  var config = {
+	    apiKey: "AIzaSyAd45R67ts78jB2xXMKJ4n2YoD2xXU2y7M",
+	    authDomain: "https://harambe-loved-waters-reporter.firebaseapp.com",
+	    databaseURL: "https://harambe-loved-waters-reporter.firebaseio.com",
+	    // storageBucket: "<BUCKET>.appspot.com",
+	    // messagingSenderId: "<SENDER_ID>",
+	  };
+	  firebase.initializeApp(config);
+	</script>
 </body>
 </html>
