Put Firebase JS code in scripts.js

--- a/WaterReporterWebsite/index.html
+++ b/WaterReporterWebsite/index.html
@@ -15,7 +15,8 @@
 		}
 	</script>
 	<script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
-	<script>
+	<script src="scripts.js"></script>
+	<!-- <script>
 	  // Initialize Firebase
 	  // TODO: Replace with your project's customized code snippet
 	  var config = {
@@ -26,6 +27,6 @@
 	    // messagingSenderId: "<SENDER_ID>",
 	  };
 	  firebase.initializeApp(config);
-	</script>
+	</script> -->
 </body>
 </html>
