--- a/WaterReporterWebsite/index.html
+++ b/WaterReporterWebsite/index.html
@@ -7,7 +7,7 @@
 	<h1>Harambe Loved Waters!</h1>
 	<!-- <h2 onclick="onClicked()">Login</h2> -->
 	<button onclick="location.href='login.html'">Login</button>
-	<button onclick="onClicked()">Sign Up</button>
+	<button onclick="getUsers()">Sign Up</button>
 	<!-- <h2>Sign Up</h2> -->
 	<script>
 		function onClicked() {
