added registration page

--- a/WaterReporterWebsite/index.html
+++ b/WaterReporterWebsite/index.html
@@ -7,13 +7,8 @@
 	<h1>Harambe Loved Waters!</h1>
 	<!-- <h2 onclick="onClicked()">Login</h2> -->
 	<button onclick="location.href='login.html'">Login</button>
-	<button onclick="console.log(getPurityReports())">Sign Up</button>
+	<button onclick="location.href='registration.html'">Sign Up</button>
 	<!-- <h2>Sign Up</h2> -->
-	<script>
-		function onClicked() {
-			alert("Hello");
-		}
-	</script>
 	<script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
 	<script src="scripts.js"></script>
 	<!-- <script>
