Added login check

--- a/WaterReporterWebsite/login.html
+++ b/WaterReporterWebsite/login.html
@@ -18,8 +18,29 @@
     function attemptLogin() {
       var username = document.getElementById('username').value;
       var password = document.getElementById('password').value;
-      alert("Username is " + username + "\nPassword is " + password);
-  }
+      var users = getUsers();
+      var userFound = 0;
+      users.forEach(function(user) {
+        if (user.username == username) {
+          if (String(user.password) == String(password)) {
+            console.log(password + " vs " + user.password);
+            window.location.href = 'home.html';
+            userFound = 1;
+            
+          } else {
+            alert("Password does not match. Please try again.");
+            userFound = 1;
+          }
+        }
+      });
+      if (userFound == 0) {
+        alert("User not found");
+      }
+      // for (var i = 0; i < users.length; i++) {
+      //   if (users[i].name.equals(username)) {
+      //
+      //   }
+    }
   </script>
 </body>
 </html>
