--- a/WaterReporterWebsite/login.html
+++ b/WaterReporterWebsite/login.html
@@ -21,12 +21,11 @@
       var users = getUsers();
       var userFound = 0;
       users.forEach(function(user) {
-        if (user.username == username) {
+        if (user.username == username && !userFound) {
           if (String(user.password) == String(password)) {
-            console.log(password + " vs " + user.password);
             window.location.href = 'home.html';
             userFound = 1;
-            
+            setUser(user);
           } else {
             alert("Password does not match. Please try again.");
             userFound = 1;
@@ -34,12 +33,8 @@
         }
       });
       if (userFound == 0) {
-        alert("User not found");
+        alert("User not found.");
       }
-      // for (var i = 0; i < users.length; i++) {
-      //   if (users[i].name.equals(username)) {
-      //
-      //   }
     }
   </script>
 </body>
