Moved attempt login function to scripts.js

--- a/WaterReporterWebsite/login.html
+++ b/WaterReporterWebsite/login.html
@@ -14,7 +14,7 @@
   <button onclick="addUser('matt@lor','mateo','lorrrd', '123 ABC Dr', 'MANAGER', 28)">Add a random User</button>
   <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
   <script src="scripts.js"></script>
-  <script>
+  <!-- <script>
     function attemptLogin() {
       var username = document.getElementById('username').value;
       var password = document.getElementById('password').value;
@@ -36,6 +36,6 @@
         alert("User not found.");
       }
     }
-  </script>
+  </script> -->
 </body>
 </html>
