--- a/WaterReporterWebsite/registration.html
+++ b/WaterReporterWebsite/registration.html
@@ -36,6 +36,8 @@
       var added = addUser(email, username, password, addr, typeOfUser);
       if (!added) {
         alert("User not added.");
+      } else {
+        attemptLogin();
       }
   }
   </script>
