--- a/WaterReporterWebsite/registration.html
+++ b/WaterReporterWebsite/registration.html
@@ -4,7 +4,7 @@
   <title>Register</title>
 </head>
 
-<body>
+<body onload="getUsers()">
   <h1>Register</h1>
   <h2>Enter email:</h2>
   <input type="text" id="email">
