Small change to graph page

--- a/WaterReporterWebsite/graph.html
+++ b/WaterReporterWebsite/graph.html
@@ -6,7 +6,7 @@
  
 <style type="text/css">
 body { font-family: Verdana, Arial, sans-serif; font-size: 12px; }
-#graph { width: 800px; height: 400px; }
+#graph { width: 600px; height: 300px; }
 </style>
  
 <!--[if lte IE 8]><script type="text/javascript" language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.2/excanvas.min.js"></script><![endif]-->
@@ -94,6 +94,8 @@ function getCPPMGraphPoints(year, location) {
     <input type="text" id="grlocation">
     <h3>Enter Year:</h3>
     <input type="text" id="year">
+    <br><br>
     <button onclick="createGraph()" id="create">Create Graph</button>
+    <button>Back to Home</button>
 </body>
 </html>
