Added Google Map functionality (and removed dummy button from login.html)

--- a/WaterReporterWebsite/login.html
+++ b/WaterReporterWebsite/login.html
@@ -11,7 +11,7 @@
   <h2>Enter password:</h2>
   <input type="text" id="password">
   <button onclick="attemptLogin()">Login</button>
-  <button onclick="addUser('matt@lor','mateo','lorrrd', '123 ABC Dr', 'MANAGER', 28)">Add a random User</button>
+<!--   <button onclick="addUser('matt@lor','mateo','lorrrd', '123 ABC Dr', 'MANAGER', 28)">Add a random User</button> -->
   <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
   <script src="scripts.js"></script>
 </body>
