Buttons and stuff

--- a/WaterReporterWebsite/graph.html
+++ b/WaterReporterWebsite/graph.html
@@ -96,6 +96,6 @@ function getCPPMGraphPoints(year, location) {
     <input type="text" id="year">
     <br><br>
     <button onclick="createGraph()" id="create">Create Graph</button>
-    <button>Back to Home</button>
+    <button onclick="window.location.href='home.html'">Back to Home</button>
 </body>
 </html>
