--- a/WaterReporterWebsite/purityreport.html
+++ b/WaterReporterWebsite/purityreport.html
@@ -27,6 +27,7 @@
   <br>
   <br>
   <button>Submit Water Purity Report</button>
+  <button onclick="window.location.href='home.html'">Back to Home</button>
 
 
   
