--- a/WaterReporterWebsite/waterreport.html
+++ b/WaterReporterWebsite/waterreport.html
@@ -31,6 +31,7 @@
   <br>
   <br>
   <button>Submit Water Report</button>
+  <button onclick="window.location.href='home.html'">Back to Home</button>
   
 </body>
 </html>
