--- a/WaterReporterWebsite/waterreport.html
+++ b/WaterReporterWebsite/waterreport.html
@@ -2,6 +2,12 @@
 <html>
 <head>
   <title>Submit Water Report</title>
+  <style>
+       #map {
+        height: 600px;
+        width: 840px;
+       }
+    </style>
 </head>
 
 <body>
@@ -9,29 +15,182 @@
 
   <h2>Enter Location:</h2>
   <input type="text" id="reportlocation">
-
+  <button onclick="updateLocationOnMap()">Check Location on Map</button>
+  <button onclick="currentLocationMarker(map)">Use Current Location</button>
   <h2>Select Water Type:</h2>
-  <form action="" id="watertype">
-	  <input type="radio" name="type" value="Bottled"> Bottled<br>
-	  <input type="radio" name="type" value="Well"> Well<br>
-	  <input type="radio" name="type" value="Stream"> Stream <br>
-	  <input type="radio" name="type" value="Lake"> Lake <br>
-	  <input type="radio" name="type" value="Spring"> Spring <br>
-	  <input type="radio" name="type" value="Other"> Other <br>
-  </form>
-
+  <h2>
+    <select id="watertype">
+      <option value="Default">(Select water type)</option>
+      <option value="Bottled">Bottled</option>
+      <option value="Well">Well</option>
+      <option value="Stream">Stream</option>
+      <option value="Lake">Lake</option>
+      <option value="Spring">Spring</option>
+      <option value="Other">Other</option>
+    </select>
+  </h2>
+<!--   <form action="" id="watertype">
+    <input type="radio" name="type" value="Bottled"> Bottled<br>
+    <input type="radio" name="type" value="Well"> Well<br>
+    <input type="radio" name="type" value="Stream"> Stream <br>
+    <input type="radio" name="type" value="Lake"> Lake <br>
+    <input type="radio" name="type" value="Spring"> Spring <br>
+    <input type="radio" name="type" value="Other"> Other <br>
+  </form> -->
   <h2>Select Water Condition:</h2>
-  <form action="" id="watercondition">
-	  <input type="radio" name="condition" value="Waste">Waste<br>
-	  <input type="radio" name="condition" value="Treatable-Clear"> Treatable-Clear<br>
-	  <input type="radio" name="condition" value="Treatable-Muddy"> Treatable-Muddy <br>
-	  <input type="radio" name="condition" value="Potable"> Potable<br>
-  </form>
-
+  <h2>
+    <select id="watercondition">
+      <option value="Default">(Select water condition)</option>
+      <option value="Waste">Waste</option>
+      <option value="Treatable-Clear">Treatable-Clear</option>
+      <option value="Treatable-Muddy">Treatable-Muddy</option>
+      <option value="Potable">Potable</option>
+    </select>
+  </h2>
   <br>
+  <div id="map"></div>
   <br>
-  <button>Submit Water Report</button>
+  <button onclick="submitReport()">Submit Water Report</button>
   <button onclick="window.location.href='home.html'">Back to Home</button>
-  
+  <script>
+    var map;
+    var marker;
+    var geocoder;
+
+    function dropMarker(map, pos) {
+      window.setTimeout(function() {
+        if (marker !== 'undefined') {
+          marker.setMap(null);
+        }
+        marker = new google.maps.Marker({
+          map: map,
+          position: pos,
+          animation: google.maps.Animation.DROP
+        });
+      }, 100);
+    }
+
+    function currentLocationMarker(map) {
+      // Try HTML5 geolocation.
+      if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function(position) {
+              var pos = {
+                  lat: position.coords.latitude,
+                  lng: position.coords.longitude
+              };
+
+              // infoWindow.setPosition(pos);
+              // infoWindow.setContent('Location found.');
+              // marker.setMap(null);
+              // marker = new google.maps.Marker({
+              //   map: map,
+              //   title: "Title",
+              //   position: pos
+              // });
+
+              geocoder.geocode({location: pos}, function(results, status) {
+                if (status == google.maps.GeocoderStatus.OK) {
+                  // console.log(results.length);
+                  // console.log(results[0].geometry.location);
+                    map.setCenter(pos);
+                    map.setZoom(2);
+                    console.log(results);
+                    document.getElementById('reportlocation').value = results[0]['formatted_address'];
+                    if (marker !== 'undefined') {
+                      marker.setMap(null);
+                    }
+                    marker = new google.maps.Marker({
+                      map: map,
+                      position: pos
+                    });
+                } else {
+                  console.log("Unsuccessful address for reportNumber: " + report['reportNumber']);
+                }
+              });
+
+              map.setCenter(pos);
+              map.setZoom(6);
+          }, function() {
+              handleLocationError(true, infoWindow, map.getCenter());
+          });
+      } else {
+          // Browser doesn't support Geolocation
+          handleLocationError(false, infoWindow, map.getCenter());
+      }
+
+      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+          infoWindow.setPosition(pos);
+          infoWindow.setContent(browserHasGeolocation ?
+                                'Error: The Geolocation service failed.' :
+                                'Error: Your browser doesn\'t support geolocation.');
+      }
+    }
+
+    function initMap() {
+      geocoder = new google.maps.Geocoder();
+      map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 2,
+        center: {lat: 0, lng: 0}
+      });
+      marker = new google.maps.Marker({
+        map: map,
+        position: {lat: 0, lng: 0}
+      })
+
+    // var strictBounds = new google.maps.LatLngBounds(
+    //   new google.maps.LatLng(-45, -90),
+    //   new google.maps.LatLng(45, 90) 
+    // );
+      // map.fitBounds(strictBounds);
+      // map.fitBounds(new google.maps.LatLng(-45, -90), new google.maps.LatLng(45,90));
+      
+      // var infoWindow = new google.maps.InfoWindow({map: map});
+      // var marker = new google.maps.Marker({
+      //   map: map,
+      //   title: "Title",
+      //   position: {lat: 0, lng: 0}
+      // });
+      // currentLocationMarker(map);
+    }
+
+    function updateLocationOnMap(map) {
+      geocoder.geocode({address: document.getElementById('reportlocation').value}, function(results, status) {
+          if (status == google.maps.GeocoderStatus.OK) {
+            console.log(results[0]);
+            if (marker !== 'undefined') {
+              marker.setMap(null);
+            }
+            marker = new google.maps.Marker({
+              map: map,
+              title: "Title",
+              position: results[0].geometry.location
+            })
+          } else {
+            console.log("Unsuccessful address for reportNumber: " + report['reportNumber']);
+          }
+        });
+    }
+
+    function submitReport() {
+      var location = document.getElementById('reportlocation').value;
+      var wType = document.getElementById('watertype').value;
+      var wCondition = document.getElementById('watercondition').value;
+
+      console.log(location + ", " + wType + ", " + wCondition);
+      if (wType != "Default" && wCondition != "Default") {
+        var added = addWaterReport(location, wType, wCondition);
+        if (added) {
+          window.location.href = home.html;
+        } else {
+          alert("Water report not added.");
+        }
+      }
+    }
+  </script>
+  <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
+  <script src="scripts.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKI3rpMb8mTAen_Hae3ZcO1uUeI0g-lLA&callback=initMap"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script> -->
+  <!-- <script src="https://maps.googleapis.com/maps/api/geocode/json?key=AIzaSyAKI3rpMb8mTAen_Hae3ZcO1uUeI0g-lLA"></script> -->
 </body>
 </html>
