--- a/WaterReporterWebsite/home.html
+++ b/WaterReporterWebsite/home.html
@@ -75,23 +75,103 @@
 	      		});
 	      	}
 
-	      	getWaterReps(function() {
-	      		waterReports.forEach(function(report) {
-					geocoder.geocode({address: report['addressStr']}, function(results, status) {
-						if (status == google.maps.GeocoderStatus.OK) {
-							// console.log(results.length);
-							// console.log(results[0].geometry.location);
+	      	function makeMarker(report) {
+	      		geocoder.geocode({address: report['addressStr']}, function(results, status) {
+					if (status == google.maps.GeocoderStatus.OK) {
+						// if (results != 'null') {
+						// 	setTimeout(makeMarker, 1000, report);
+						// } else {
+							// window.setTimeout(function() {
+							var pos = results[0].geometry.location;
 							var marker = new google.maps.Marker({
 								map: map,
-								title: "Title",
-								position: results[0].geometry.location
-							})
-						} else {
-							console.log("Unsuccessful address for reportNumber: " + report['reportNumber']);
-						}
-					});
-	      			// console.log(report['reportNumber']);
-	      			// console.log(report);
+								position: pos
+									// animation: google.maps.Animation.DROP
+ 								// }, 100);
+							});
+							console.log(report);
+							console.log(results[0]);
+							contentString =
+								'Address: ' + report['addressStr'] + '\n'
+								+ '(Google Maps Address): ' + results[0]['formatted_address'] + '\n'
+								+ 'Condition: ' + report['conditionOfWater'] + '\n'
+								+ 'Time: ' + report['dateAndTime'] + '\n'
+								+ 'Report Number: ' + report['reportNumber'] + '\n'
+								+ 'Type of Water: ' + report['typeOfWater'] + '\n'
+								+ 'Username: ' + report['username'] + '\n'
+								// '<div id="content">'+
+					   //          '<div id="siteNotice">'+
+					   //          '</div>'+
+					   //          '<h1 id="firstHeading" class="firstHeading">Uluru</h1>'+
+					   //          '<div id="bodyContent">'+
+					   //          '<p><b>Uluru</b>, also referred to as <b>Ayers Rock</b>, is a large ' +
+					   //          'sandstone rock formation in the southern part of the '+
+					   //          'Northern Territory, central Australia. It lies 335&#160;km (208&#160;mi) '+
+					   //          'south west of the nearest large town, Alice Springs; 450&#160;km '+
+					   //          '(280&#160;mi) by road. Kata Tjuta and Uluru are the two major '+
+					   //          'features of the Uluru - Kata Tjuta National Park. Uluru is '+
+					   //          'sacred to the Pitjantjatjara and Yankunytjatjara, the '+
+					   //          'Aboriginal people of the area. It has many springs, waterholes, '+
+					   //          'rock caves and ancient paintings. Uluru is listed as a World '+
+					   //          'Heritage Site.</p>'+
+					   //          '<p>Attribution: Uluru, <a href="https://en.wikipedia.org/w/index.php?title=Uluru&oldid=297882194">'+
+					   //          'https://en.wikipedia.org/w/index.php?title=Uluru</a> '+
+					   //          '(last visited June 22, 2009).</p>'+
+					   //          '</div>'+
+					   //          '</div>'
+					            ;
+							var infowindow = new google.maps.InfoWindow({
+					          content: contentString
+					        });
+
+					        var marker = new google.maps.Marker({
+					          position: pos,
+					          map: map,
+					        });
+					        marker.addListener('click', function() {
+								infowindow.open(map, marker);
+					        });
+						// }
+
+					// // if (status === 'OK') {
+					// 	// console.log(results.length);
+					// 	// console.log(results[0].geometry.location);
+					// 	// console.log(results[0]);
+					// 	var marker = new google.maps.Marker({
+					// 		map: map,
+					// 		title: "Title",
+					// 		position: results[0].geometry.location
+					// 	});
+					} else {
+						setTimeout(makeMarker, 500, report);
+						console.log("Unsuccessful address for reportNumber: " + report['reportNumber'] + ", ");
+							// + report['addressStr'] + ", " + results);
+					}
+				});
+	      	}
+
+	      	getWaterReps(function() {
+	      		waterReports.forEach(function(report) {
+	      			makeMarker(report)
+	    //   			// console.log(report['addressStr']);
+					// geocoder.geocode({address: report['addressStr']}, function(results, status) {
+					// 	if (status == google.maps.GeocoderStatus.OK) {
+					// 	// if (status === 'OK') {
+					// 		// console.log(results.length);
+					// 		// console.log(results[0].geometry.location);
+					// 		// console.log(results[0]);
+					// 		var marker = new google.maps.Marker({
+					// 			map: map,
+					// 			title: "Title",
+					// 			position: results[0].geometry.location
+					// 		})
+					// 	} else {
+					// 		console.log("Unsuccessful address for reportNumber: " + report['reportNumber'] + ", "
+					// 			+ report['addressStr'] + ", " + results);
+					// 	}
+					// });
+	    //   			// console.log(report['reportNumber']);
+	    //   			// console.log(report);
 	      		});
 	      	});
 
