--- a/WaterReporterWebsite/home.html
+++ b/WaterReporterWebsite/home.html
@@ -31,7 +31,7 @@
 <body>
   <h1>Welcome to Water Reporter!</h1>
   <div>
-  	<button>View Profile</button>
+  	<button onclick="window.location.href='profile.html'">View Profile</button>
   	<button onclick="window.location.href='waterreport.html'">Submit Water Report</button>
   	<button onclick="window.location.href='purityreport.html'">Submit Water Purity Report</button>
   	<button onclick="window.location.href='graph.html'">Purity Trends</button>
