--- a/WaterReporterWebsite/registration.html
+++ b/WaterReporterWebsite/registration.html
@@ -25,6 +25,7 @@
   <button onclick="attemptRegistration()">Register</button>
   <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
   <script src="scripts.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
   <script>
     function attemptRegistration() {
       var username = document.getElementById('username').value;
@@ -34,6 +35,7 @@
       var addr = document.getElementById('address').value;
 
       var added = addUser(email, username, password, addr, type);
+      console.log("added: " + added);
       if (!added) {
         alert("User not added.");
       } else {
