--- a/WaterReporterWebsite/profile.html
+++ b/WaterReporterWebsite/profile.html
@@ -6,10 +6,17 @@
   <script type="text/javascript" language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.2/jquery.flot.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
   <script src="scripts.js"></script>
+  <style>
+    #div1 {
+        float: right;
+        display: inline-block;
+    }
+  </style>
 </head>
 
 
 <body>
+  <div id="div1"><img src="images/harambe.png" alt="Harambe" style="width:500px;height:600px;"></div>
   <h1>Your Profile</h1>
 
   <h2>User Type:</h2>
