--- a/WaterReporterWebsite/home.html
+++ b/WaterReporterWebsite/home.html
@@ -22,6 +22,14 @@
         height: 600px;
         width: 840px;
        }
+       #div1 {
+        float: left;
+        display: inline-block;
+       }
+       #div2 {
+        float: right;
+        display: inline-block;
+       }
     </style>
     <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
     <script src="scripts.js"></script>
@@ -30,13 +38,16 @@
 <!-- <body onload="getWaterReports()"> -->
 <body>
   <h1>Welcome to Water Reporter!</h1>
-  <div>
+  <div id="div1">
   	<button onclick="window.location.href='profile.html'">View Profile</button>
   	<button onclick="window.location.href='waterreport.html'">Submit Water Report</button>
   	<button onclick="window.location.href='purityreport.html'">Submit Water Purity Report</button>
   	<button onclick="window.location.href='graph.html'">Purity Trends</button>
   	<button onclick="logout()">Logout</button>
   </div>
+  <div id="div2">
+    <img src="images/harambe.png" alt="Harambe" style="width:500px;height:600px;">
+  </div
   <br>
 	<div id="map"></div>
 	<!-- <script>
@@ -48,7 +59,7 @@
 		});
 		}
 	</script> -->
-	
+
 	<script>
 		// setUser(JSON.parse(sessionStorage.getItem('currentUser')));
 		getUser();
@@ -64,7 +75,7 @@
 	      	});
 	      	var strictBounds = new google.maps.LatLngBounds(
 				new google.maps.LatLng(-45, -90),
-				new google.maps.LatLng(45, 90) 
+				new google.maps.LatLng(45, 90)
 			);
 			map.fitBounds(strictBounds);
 	      	// map.fitBounds(new google.maps.LatLng(-45, -90), new google.maps.LatLng(45,90));
@@ -201,7 +212,7 @@
 		      // 	});
 	      	// }
 
-	      	
+
 	        // var uluru = {lat: -25.363, lng: 131.044};
 	        // var map = new google.maps.Map(document.getElementById('map'), {
 	        //   zoom: 2,
@@ -214,7 +225,6 @@
 
       }
     </script>
-
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKI3rpMb8mTAen_Hae3ZcO1uUeI0g-lLA&callback=initMap"></script>
 </body>
 </html>
