--- a/WaterReporterWebsite/index.html
+++ b/WaterReporterWebsite/index.html
@@ -2,8 +2,15 @@
 <html>
 <head>
 	<title>Water Report</title>
+    <style>
+      #div1 {
+          float: right;
+          display: inline-block;
+      }
+    </style>
 </head>
 <body>
+    <div id="div1"><img src="images/harambe.png" alt="Harambe" style="width:500px;height:600px;"></div>
 	<h1>Harambe Loved Waters!</h1>
 	<!-- <h2 onclick="onClicked()">Login</h2> -->
 	<button onclick="location.href='login.html'">Login</button>
