--- a/WaterReporterWebsite/login.html
+++ b/WaterReporterWebsite/login.html
@@ -2,9 +2,16 @@
 <html>
 <head>
   <title>Login</title>
+  <style>
+    #div1 {
+        float: right;
+        display: inline-block;
+    }
+  </style>
 </head>
 
 <body onload="getUsers()">
+  <div id="div1"><img src="images/harambe.png" alt="Harambe" style="width:500px;height:600px;"></div>
   <h1>Login</h1>
   <h2>Enter username:</h2>
   <input type="text" id="username">
