--- a/WaterReporterWebsite/purityreport.html
+++ b/WaterReporterWebsite/purityreport.html
@@ -7,10 +7,15 @@
         height: 600px;
         width: 840px;
        }
+       #div1 {
+        float: right;
+        display: inline-block;
+       }
     </style>
 </head>
 
 <body>
+  <div id="div1"><img src="images/harambe.png" alt="Harambe" style="width:500px;height:600px;"></div>
   <h1>Submit Water Purity Report</h1>
 
   <h2>Enter Location:</h2>
@@ -31,7 +36,7 @@
       <option value="Other">Other</option> -->
     </select>
   </h2>
-  
+
   <!-- <form action="" id="puritycondition">
     <input type="radio" name="purcondition" value="Safe">Safe<br>
     <input type="radio" name="purcondition" value="Treatable">Treatable<br>
@@ -132,11 +137,11 @@
 
     // var strictBounds = new google.maps.LatLngBounds(
     //   new google.maps.LatLng(-45, -90),
-    //   new google.maps.LatLng(45, 90) 
+    //   new google.maps.LatLng(45, 90)
     // );
       // map.fitBounds(strictBounds);
       // map.fitBounds(new google.maps.LatLng(-45, -90), new google.maps.LatLng(45,90));
-      
+
       // var infoWindow = new google.maps.InfoWindow({map: map});
       // var marker = new google.maps.Marker({
       //   map: map,
