Final changes to be committed

--- a/WaterReporterWebsite/waterreport.html
+++ b/WaterReporterWebsite/waterreport.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Submit Water Report</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <style>
        #map {
         height: 600px;
