--- a/WaterReporterWebsite/home.html
+++ b/WaterReporterWebsite/home.html
@@ -31,6 +31,7 @@
         display: inline-block;
        }
     </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
     <script src="scripts.js"></script>
 </head>
