--- a/WaterReporterWebsite/index.html
+++ b/WaterReporterWebsite/index.html
@@ -8,6 +8,7 @@
           display: inline-block;
       }
     </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div id="div1"><img src="images/harambe.png" alt="Harambe" style="width:500px;height:600px;"></div>
