--- a/WaterReporterWebsite/login.html
+++ b/WaterReporterWebsite/login.html
@@ -8,6 +8,7 @@
         display: inline-block;
     }
   </style>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body onload="getUsers()">
