--- a/WaterReporterWebsite/registration.html
+++ b/WaterReporterWebsite/registration.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Register</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <style>
     #div1 {
         float: right;
